--- a/RGB Analyze /RGB Analyze .ipynb
+++ b/RGB Analyze /RGB Analyze .ipynb
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0dce3aca",
+   "id": "dbc49f32",
    "metadata": {},
    "outputs": [
     {
@@ -6631,7 +6631,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "a80aaccc",
+   "id": "d3d0a91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6740,7 +6740,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "7311d5c8",
+   "id": "dad26d66",
    "metadata": {},
    "outputs": [
     {
@@ -6897,7 +6897,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "66aa10a5",
+   "id": "1a87693e",
    "metadata": {},
    "outputs": [
     {
@@ -6915,7 +6915,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2dd6a3e0",
+   "id": "879795ff",
    "metadata": {},
    "outputs": [
     {
@@ -6937,7 +6937,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "dc3f032e",
+   "id": "21eff844",
    "metadata": {},
    "outputs": [
     {
@@ -6954,7 +6954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfb3fcf",
+   "id": "46259b1a",
    "metadata": {},
    "source": [
     "# idx： 0 到 447 有东西，448之后没内容\n"
@@ -6963,7 +6963,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a2cbcac4",
+   "id": "6671656a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6981,7 +6981,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "e95d531f",
+   "id": "60140428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6996,7 +6996,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "0c985322",
+   "id": "87b4936e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7010,8 +7010,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "9a65be38",
+   "execution_count": 6,
+   "id": "4702edf8",
    "metadata": {},
    "outputs": [
     {
@@ -7127,16 +7127,16 @@
     "\n",
     "# 从pickle文件中加载数组\n",
     "with open(\"price_data.pickle\", \"rb\") as f:\n",
-    "    my_array = pickle.load(f)\n",
+    "    array2 = pickle.load(f)\n",
     "\n",
     "# 打印数组\n",
-    "print(my_array)"
+    "print(array2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "b9b87361",
+   "execution_count": 5,
+   "id": "8becfbea",
    "metadata": {},
    "outputs": [
     {
@@ -7459,16 +7459,16 @@
     "\n",
     "# 从pickle文件中加载数组\n",
     "with open(\"image_data.pickle\", \"rb\") as f:\n",
-    "    my_array = pickle.load(f)\n",
+    "    array1 = pickle.load(f)\n",
     "\n",
     "# 打印数组\n",
-    "print(my_array)\n"
+    "print(array1)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edd845c",
+   "id": "05fac6b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7476,7 +7476,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f556b477",
+   "id": "d2625d23",
    "metadata": {},
    "outputs": [
     {
@@ -7496,7 +7496,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "0abd8fa4",
+   "id": "d20c163d",
    "metadata": {},
    "outputs": [
     {
@@ -7524,7 +7524,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a0d002f1",
+   "id": "883115fe",
    "metadata": {},
    "outputs": [
     {
@@ -7541,27 +7541,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "af1371b5",
+   "execution_count": 149,
+   "id": "e9deb7aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t 1\n",
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1,2]\n",
+    "l = [23,34,45,46,56]\n",
+    "print('\\t' , 1) \n",
+    "\n",
+    "print(*list)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "199fa590",
+   "id": "02d79ff1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load image data and price data\n",
+    "array1 = np.array(array1)\n",
+    "array2 = np.array(array2)\n",
+    "\n",
+    "# Use PCA to reduce feature dimensionality\n",
+    "pca = PCA(n_components=100)\n",
+    "X = pca.fit_transform(array1.reshape(array1.shape[0], -1))\n",
+    "\n",
+    "# Split into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, array2, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Use stratified sampling to reduce training set size\n",
+    "sample_size = 500\n",
+    "classes = np.unique(y_train)\n",
+    "X_train_sampled = np.zeros((sample_size * len(classes), X_train.shape[1]))\n",
+    "y_train_sampled = np.zeros(sample_size * len(classes))\n",
+    "for i, c in enumerate(classes):\n",
+    "    class_indices = np.where(y_train == c)[0]\n",
+    "    sampled_indices = np.random.choice(class_indices, size=sample_size, replace=False)\n",
+    "    X_train_sampled[i*sample_size:(i+1)*sample_size] = X_train[sampled_indices]\n",
+    "    y_train_sampled[i*sample_size:(i+1)*sample_size] = y_train[sampled_indices]\n",
+    "\n",
+    "# Train random forest model\n",
+    "rf = RandomForestRegressor(n_estimators=100, max_depth=10)\n",
+    "rf.fit(X_train_sampled, y_train_sampled)\n",
+    "\n",
+    "# Calculate feature importances\n",
+    "importances = rf.feature_importances_\n",
+    "print(importances)\n",
+    "\n",
+    "# Calculate correlation coefficients\n",
+    "corr_coef = np.corrcoef(X_train_sampled.T, y_train_sampled)\n",
+    "print(corr_coef)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a0e9cf",
+   "id": "d9191488",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import svm\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load and preprocess dataset\n",
+    "X = np.load('image_data.npy')\n",
+    "y = np.load('price_data.npy')\n",
+    "\n",
+    "# Reduce dimensionality using PCA\n",
+    "pca = PCA(n_components=100)\n",
+    "X_pca = pca.fit_transform(X.reshape(X.shape[0], -1))\n",
+    "\n",
+    "# Split into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_pca, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Sample a subset of the training data\n",
+    "train_idx = np.random.choice(X_train.shape[0], size=1000, replace=False)\n",
+    "X_train = X_train[train_idx]\n",
+    "y_train = y_train[train_idx]\n",
+    "\n",
+    "# Train SVM model\n",
+    "svm_model = svm.SVR(kernel='rbf', C=10, gamma=0.01)\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate model\n",
+    "test_score = svm_model.score(X_test, y_test)\n",
+    "\n",
+    "# Calculate correlation coefficients\n",
+    "corr_coef = np.corrcoef(X_pca.T, y)\n",
+    "print(corr_coef)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96de65db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load and preprocess dataset\n",
+    "X = np.load('image_data.npy')\n",
+    "y = np.load('price_data.npy')\n",
+    "\n",
+    "# Split into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define neural network architecture\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Dense(128, activation='relu', input_shape=(X.shape[1],)),\n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dense(1, activation='linear')\n",
+    "])\n",
+    "\n",
+    "# Compile model\n",
+    "model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+    "\n",
+    "# Train model\n",
+    "model.fit(X_train, y_train, epochs=50, batch_size=32, validation_data=(X_test, y_test))\n",
+    "\n",
+    "# Evaluate model\n",
+    "test_loss, test_mae = model.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X_test)\n"
+   ]
   },
   {
    "cell_type": "code",
